[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ryan Slipe <rslipe@my.gcu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.32.3"
pandas = "^2.2.2"
fastparquet = "^2024.5.0"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
plotly = "^5.24.0"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
