[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ryan Slipe <rslipe@my.gcu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.13.0"
jupyter = "^1.0.0"
requests = "^2.32.3"
pandas = "^1.5.2"
fastparquet = "^2024.5.0"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
plotly = "^5.24.0"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
optuna = "^4.0.0"
numpy = "1.26.4"
python-dotenv = "^1.0.1"
hopsworks = {extras = ["python"], version = "^4.1.2"}
streamlit = "^1.38.0"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
